src/prelude/ast/snapshots/serenity__prelude__ast__to_str__test__to_str_for_stmt@while.snap
---
source: src/prelude/ast/to_str.rs
expression: result
---
[line    1] While: 
[line    1] ├─── Literal: 1
[line    1] ╰─── Print: 
[line    1]      ╰─── Literal: 1
